2007-06-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: applied modified patch from
	Paul Seidel that adds controls for the playback speed (bug #338380).

2007-06-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/oilify.c: applied patch from Daniel Richard G.
	which adds a new PDB entry with more options and improves speed
	and quality of the algorithm (bug #347075).

2007-06-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.c (gimp_projection_get_level): take the
	image size into account and return the level that is actually used.
	Fixes bug #448185.

2007-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-save.c: coding style improvements.

2007-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-save.c: applied patch from Eric Ross that
	changes the PSD save plug-in to save an extra data block with the
	layer names in UCS-2 encoding (bug #447267).

2007-06-15  Michael Natterer  <mitch@gimp.org>

	* app/actions/view-actions.c (view_actions_update): make sure all
	view actions are insensitive when there is no view.

2007-06-15  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/gfig/gfig-dobject.c: prepend instead of appending to
	list (patch written earlier).

2007-06-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdatafactory.c
	(gimp_data_factory_refresh_cache_remove): micro optimization.

2007-06-14  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdatafactory.c (gimp_data_factory_data_foreach):
	remove calls to container_freeze() and container_thaw()

	(gimp_data_factory_data_reload)
	(gimp_data_factory_data_free): add them here instead.

	(gimp_data_factory_data_save): remove freeze/thaw calls here
	without any replacement. The list doesn't change by saving its
	items. Fixes insanely long quit time when there are many data
	objects.

2007-06-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c: implement the GimpColorManaged interface.

2007-06-14  Sven Neumann  <sven@gimp.org>
